<resources>
    <string name="app_name">Travel Journal</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountain">Mountain</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="price_eur">Price(eur)</string>
    <string name="rating">Rating</string>
    <string name="save">Save</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_drawer">Home</string>
    <string name="favourite_drawer">Favourite</string>
    <string name="about_us_drawer">About Us</string>
    <string name="contact_drawer">Contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_option">SELECT</string>
    <string name="camera_opt">Gallery photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="snack_eror">Login error</string>

    <string name="hint_email">Email</string>
    <string name="password">Password</string>

    <string name="error_snak">Email already exist</string>

</resources>
